trunk/plugins/abc/abcp-0.1a/abcplib/src/abcpnote.c
/* Generated by re2c 0.5 on Fri Dec 31 13:56:16 2004 */
#line 1 "abcpnote.re"

#include "abcp.h"

/*
  Note parsing
  
  The following function will return "nominal" characteristics for a note.
  With "nominal", I mean that the real values could depend from other factors.
  
  A note with pitch "b" is actually a "_b" if the key is Fmaj but the function
  abcNoteAccidental("b") always returns "NONE".
  
  Returns the uppercase ASCII representation of the pitch (i.e. 'A'-'G')
  or '?' if no note is found.
  
  Returns an ASCII char representing the accidentals
  n=none, N=natural, f=flat, F=double flat, s=sharp, S=double sharp
  
 The "nominal" Octave of the note (no trasposition is considered)
   0 C,,,,   -> B,,,
   1 C,,,
   2 C,,    -> B,
   3 C,     -> B
   4 C   -> b 
   5 c   -> b'
   6 c'  -> b''
   7 c''
   8 c'''
   9 c'''' -> b'''''
   
   
 and so on. 

  The maximum extension for octaves is 0 .. 9 with the (central C being 4)
  The function manages equalities like: "C' = c" , "A', = A,' = A", ...
  
  This implies that ABCp can handle sounds in the range 16.3Hz .. 15.8MHz,
  
 The "nominal" note length is expressed as a fraction of the
 default length as stated by the L: field
 
 Also microtones are supported in the same form as abcm2ps:
   ^3/4C _/f'
   
 
0123456789012
NEPAONNDDnndd
\\\\\\ \ \ \___ microtone denominator (in hex 00 .. FF)
 \\\\\\ \ \____ microtone mumerator   (in hex 00 .. FF)
  \\\\\\ \_____ length denominator    (in hex 00 .. FF)
   \\\\\\______ length mumerator      (in hex 00 .. FF)
    \\\\\______ octave (see above)
     \\\\______ Accidental n=none, N=natural, f=flat, F=double flat,       
      \\\                  s=sharp S=double sharp
       \\\                 Optional accidentals (e.g. (=) are coded
        \\\                using the following letter:
         \\\               O=opt. natural, g=opt. flat, G=opt. dbl. flat 
          \\\              t=sharp T=double sharp
           \\\___ Pitch 
            \\___ Error
             \___ Type (Note = 'N')

 
 
             
Errors      

1= Pitch not found
2= Octave out of range  0 .. 9
3= Length out of range   0 .. 255
4=
5=
6=
        
*/

#line 82



char * abcNNote(char* pak, char *str)
{
  YYCTYPE *YYCURSOR,*YYLIMIT,*YYMARKER,*YYSTART;
  char c;
  int oct=0;
  int num=1,den=1;
  int t;
  
  if (str==NULL || pak==NULL) return NULL;
    
  YYCURSOR=str; while (isspace(*YYCURSOR)) YYCURSOR++;
  YYLIMIT=str;  while (*YYLIMIT) YYLIMIT++;
  
             /*0123456789012*/
  setpack(pak,"NEPAONNDDnndd");

  
  
  if (*YYCURSOR == 'Z' ||
      *YYCURSOR == 'z' ||
      *YYCURSOR == 'x' ) {
    pak[2]=*YYCURSOR++; 
    goto duration; 
  }
  
  t=0;
  if (*YYCURSOR == '(') {
    t=1;
    YYCURSOR++;
  }
  
accidental: 
   
  {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy0;
yy1:	++YYCURSOR;
yy0:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= ']'){
		if(yych == '=')	goto yy6;
		goto yy8;
	} else {
		if(yych <= '^')	goto yy4;
		if(yych >= '`')	goto yy8;
		goto yy2;
	}
yy2:	yych = *++YYCURSOR;
	if(yych == '_')	goto yy12;
	goto yy3;
yy3:
#line 121
	{ t+='f' ; goto mtone;}
yy4:	yych = *++YYCURSOR;
	if(yych == '^')	goto yy10;
	goto yy5;
yy5:
#line 122
	{ t+='s' ; goto mtone;}
yy6:	yych = *++YYCURSOR;
	goto yy7;
yy7:
#line 123
	{ t+='N' ; goto pitch;}
yy8:	yych = *++YYCURSOR;
	goto yy9;
yy9:
#line 124
	{ YYCURSOR-- ; goto pitch;}
yy10:	yych = *++YYCURSOR;
	goto yy11;
yy11:
#line 120
	{ t+='S' ; goto pitch;}
yy12:	yych = *++YYCURSOR;
	goto yy13;
yy13:
#line 119
	{ t+='F' ; goto pitch;}
}
#line 125


mtone:  
   YYSTART=YYCURSOR;

  {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy14;
yy15:	++YYCURSOR;
yy14:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '.')	goto yy20;
	if(yych <= '/')	goto yy18;
	if(yych >= ':')	goto yy20;
	goto yy16;
yy16:	yych = *++YYCURSOR;
	goto yy28;
yy17:
#line 131
	{ num = atoi(YYSTART)          ; goto mtone;}
yy18:	yych = *++YYCURSOR;
	if(yych <= '/')	goto yy23;
	if(yych <= '9')	goto yy24;
	goto yy23;
yy19:
#line 133
	{ den = 1<<(YYCURSOR-YYSTART)  ; goto pitch;}
yy20:	yych = *++YYCURSOR;
	goto yy21;
yy21:
#line 134
	{ YYCURSOR-- ; goto pitch;}
yy22:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy23;
yy23:	if(yych == '/')	goto yy22;
	goto yy19;
yy24:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy25;
yy25:	if(yych <= '/')	goto yy26;
	if(yych <= '9')	goto yy24;
	goto yy26;
yy26:
#line 132
	{ den = atoi(YYSTART+1)        ; goto pitch;}
yy27:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy28;
yy28:	if(yych <= '/')	goto yy17;
	if(yych <= '9')	goto yy27;
	goto yy17;
}
#line 135

  
  
pitch:
  sethex(pak+9,num);
  sethex(pak+11,den);

  if (*YYCURSOR == ')') YYCURSOR++;
  
  pak[2] = toupper(*YYCURSOR);
  pak[3] = t<2? 'n':t ;
    
  {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy29;
yy30:	++YYCURSOR;
yy29:
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych <= 'G'){
		if(yych <= '@')	goto yy37;
		if(yych >= 'C')	goto yy33;
		goto yy31;
	} else {
		if(yych <= '`')	goto yy37;
		if(yych <= 'b')	goto yy33;
		if(yych <= 'g')	goto yy35;
		goto yy37;
	}
yy31:	yych = *++YYCURSOR;
	goto yy32;
yy32:
#line 148
	{ oct = 3; goto octave;}
yy33:	yych = *++YYCURSOR;
	goto yy34;
yy34:
#line 149
	{ oct = 4; goto octave;}
yy35:	yych = *++YYCURSOR;
	goto yy36;
yy36:
#line 150
	{ oct = 5; goto octave;}
yy37:	yych = *++YYCURSOR;
	goto yy38;
yy38:
#line 151
	{ setperr(pak,1) ; goto gotnote;}
}
#line 152


octave:
  {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy39;
yy40:	++YYCURSOR;
yy39:
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych == '\'')	goto yy41;
	if(yych == ',')	goto yy43;
	goto yy45;
yy41:	yych = *++YYCURSOR;
	goto yy42;
yy42:
#line 156
	{ oct++      ; goto octave;}
yy43:	yych = *++YYCURSOR;
	goto yy44;
yy44:
#line 157
	{ oct--      ; goto octave;}
yy45:	yych = *++YYCURSOR;
	goto yy46;
yy46:
#line 158
	{ YYCURSOR-- ; goto gotpitch;}
}
#line 159


gotpitch:

  if (oct < 0)      { setperr(pak,2); oct = 0; }
  else if (oct > 9) { setperr(pak,2); oct = 9; }
  
  pak[4] = '0' + oct;
  num=1;den=1;
  
duration:
  YYSTART=YYCURSOR;
  
  {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy47;
yy48:	++YYCURSOR;
yy47:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '.')	goto yy53;
	if(yych <= '/')	goto yy51;
	if(yych >= ':')	goto yy53;
	goto yy49;
yy49:	yych = *++YYCURSOR;
	goto yy61;
yy50:
#line 173
	{ num = atoi(YYSTART)          ; goto duration;}
yy51:	yych = *++YYCURSOR;
	if(yych <= '/')	goto yy56;
	if(yych <= '9')	goto yy57;
	goto yy56;
yy52:
#line 175
	{ den = 1<<(YYCURSOR-YYSTART)  ; goto gotnote;}
yy53:	yych = *++YYCURSOR;
	goto yy54;
yy54:
#line 176
	{ goto gotnote;}
yy55:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy56;
yy56:	if(yych == '/')	goto yy55;
	goto yy52;
yy57:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy58;
yy58:	if(yych <= '/')	goto yy59;
	if(yych <= '9')	goto yy57;
	goto yy59;
yy59:
#line 174
	{ den = atoi(YYSTART+1)        ; goto gotnote;}
yy60:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy61;
yy61:	if(yych <= '/')	goto yy50;
	if(yych <= '9')	goto yy60;
	goto yy50;
}
#line 177

    
gotnote:

  sethex(pak+5,num);
  sethex(pak+7,den);

  return pak;
}
